<resources>
    <!--    登陆-->
    <string name="w_app_name">畅Wan</string>
    <string name="w_login">登录</string>
    <string name="w_username">账号</string>
    <string name="w_password">密码</string>

    <string name="w_login_login">账号登录</string>
    <string name="w_login_des">登录即表示同意"用户协议"和"隐私政策"</string>
    <string name="w_login_forget_password">忘记密码?</string>
    <string name="w_login_loading">正在登录..</string>

    <string name="w_navigate_home">首页</string>
    <string name="w_navigate_project">项目</string>
    <string name="w_navigate_square">广场</string>
    <string name="w_navigate_we_public">公众号</string>
    <string name="w_navigate_mine">我的</string>

    <string name="w_article_top">置顶</string>
    <string name="w_article_new">新</string>

    <string name="w_web_collect">收藏</string>
    <string name="w_web_share">分享</string>
    <string name="w_web_browser">用浏览器打开</string>

    <!--    我的-->
    <string name="w_mine_person_page">个人主页</string>
    <string name="w_mine_read_history">浏览历史</string>
    <string name="w_mine_collection">收藏</string>
    <string name="w_mine_integral">积分</string>
    <string name="w_mine_rank">排名</string>
    <string name="w_mine_read_count">今日阅读</string>

    <string name="w_mine_attention">关注</string>


    <string name="w_home_default">EasyLoad使用 | 快来Start一下项目吧</string>
    <string name="w_home_publish">发布</string>

    <string name="w_setting_right">All Rights Reserved By YanWu</string>
    <string name="w_setting_exit">退出登录</string>
    <string name="w_setting_title">设置</string>
    <string name="w_setting_night_mode">夜间模式</string>

    <!--    搜索-->
    <string name="w_search_cancel">取消</string>
    <string name="w_search_history">历史记录</string>
    <string name="w_search_all_search">大家都在搜</string>

    <string name="w_integral_title">积分Rank榜</string>
    <string name="w_integral_record">积分记录</string>

    <!--    收藏-->
    <string name="w_collect_login_first">请登录</string>


    <string name="w_load_more_default">正在加载..</string>
    <string name="w_load_more_retry">点击重新加载</string>
</resources>
