<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="click"
            type="com.xu.module.wan.ui.activity.setting.SettingActivity.OnClick" />

        <variable
            name="vm"
            type="com.xu.module.wan.ui.activity.setting.SettingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:onClick="@{()->click.back()}"
            android:src="@drawable/res_back_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/v_1"
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_marginTop="24dp"
            android:background="@color/res_f2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w_setting_title"
            android:textColor="@color/res_black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/img_back" />


        <TextView
            android:id="@+id/tv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/w_setting_night_mode"
            android:textColor="@color/res_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/v_1" />

        <View
            android:id="@+id/v_2"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/res_f2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_1" />


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_night"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:checked="@={vm.nightMode}"
            android:thumb="@drawable/res_shape_switch"
            android:track="@drawable/res_selector_switch"
            app:layout_constraintBottom_toBottomOf="@+id/tv_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_1" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:progress="@={vm.nightAlpha}"
            android:visibility="@{vm.nightMode?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="@+id/tv_1"
            app:layout_constraintEnd_toStartOf="@+id/sw_night"
            app:layout_constraintStart_toEndOf="@+id/tv_1"
            app:layout_constraintTop_toTopOf="@+id/tv_1" />

        <TextView
            android:id="@+id/tv_rights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/w_setting_right"
            android:textColor="@color/res_99"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/res_white"
            android:gravity="center"
            android:onClick="@{()->click.onExit()}"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/w_setting_exit"
            android:textColor="@color/w_color_red"
            android:visibility="@{vm.loginStatus.booleanValue()?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toTopOf="@+id/tv_rights"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>