<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.xu.module.wan.ui.fragment.mine.MineViewModel" />

        <variable
            name="click"
            type="com.xu.module.wan.ui.fragment.mine.MineFragment.OnClick" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/res_f8">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="36dp"
                android:background="@drawable/w_shape_red_circle"
                android:gravity="center"
                android:onClick="@{()->click.jumpLogin()}"
                android:text="@string/w_login"
                android:textColor="@color/res_white"
                android:textSize="20sp"
                android:visibility="@{vm.loginStatus.booleanValue()? View.GONE:View.VISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="gone" />

            <ImageView
                android:id="@+id/img_avatar"
                roundUrl="@{vm.userInfoLiveData.icon}"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/w_vector_default_avatar" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@{vm.userInfoLiveData.username}"
                android:textColor="@color/res_black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/img_avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/img_avatar"
                app:layout_constraintTop_toTopOf="@+id/img_avatar"
                tools:text="南子海涯" />

            <ImageView
                android:id="@+id/img_right_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:src="@drawable/res_right_arrow"
                app:layout_constraintBottom_toBottomOf="@+id/tv_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_username" />

            <TextView
                android:id="@+id/tv_main_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->click.jumpPersonPage()}"
                android:text="@string/w_mine_person_page"
                android:textColor="@color/res_99"
                app:layout_constraintBottom_toBottomOf="@+id/tv_username"
                app:layout_constraintEnd_toStartOf="@+id/img_right_arrow"
                app:layout_constraintTop_toTopOf="@+id/tv_username" />


            <TextView
                android:id="@+id/w_textview2"
                num="@{vm.rankLiveData.coinCount}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/res_black"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/w_textview"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_avatar"
                tools:text="555ddd" />

            <TextView
                android:id="@+id/w_textview"
                num="@{vm.rankLiveData.rank}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/res_black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/w_textview2"
                app:layout_constraintEnd_toStartOf="@+id/w_textview3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/w_textview2"
                app:layout_constraintTop_toTopOf="@+id/w_textview2"
                tools:text="555" />

            <TextView
                android:id="@+id/w_textview3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="55"
                android:textColor="@color/res_black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/w_textview2"
                app:layout_constraintEnd_toStartOf="@+id/w_textview4"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/w_textview"
                app:layout_constraintTop_toTopOf="@+id/w_textview2" />

            <TextView
                android:id="@+id/w_textview4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textColor="@color/res_black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/w_textview2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/w_textview3"
                app:layout_constraintTop_toTopOf="@+id/w_textview2" />

            <TextView
                android:id="@+id/w_textview6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/w_mine_integral"
                android:textColor="@color/res_99"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/w_textview2"
                app:layout_constraintStart_toStartOf="@+id/w_textview2"
                app:layout_constraintTop_toBottomOf="@+id/w_textview2" />

            <androidx.constraintlayout.widget.Group
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{vm.loginStatus.booleanValue()? View.VISIBLE:View.GONE}"
                app:constraint_referenced_ids="w_textview8,w_textview4,w_textview7,w_textview3,w_textview5,w_textview,w_textview6,w_textview2,img_right_arrow,tv_username,tv_main_page,tv_main_page,img_avatar" />

            <TextView
                android:id="@+id/w_textview5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/w_mine_rank"
                android:textColor="@color/res_99"
                app:layout_constraintBottom_toBottomOf="@+id/w_textview6"
                app:layout_constraintEnd_toEndOf="@+id/w_textview"
                app:layout_constraintStart_toStartOf="@+id/w_textview"
                app:layout_constraintTop_toTopOf="@+id/w_textview6" />

            <TextView
                android:id="@+id/w_textview7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/w_mine_read_count"
                android:textColor="@color/res_99"
                app:layout_constraintBottom_toBottomOf="@+id/w_textview5"
                app:layout_constraintEnd_toEndOf="@+id/w_textview3"
                app:layout_constraintStart_toStartOf="@+id/w_textview3"
                app:layout_constraintTop_toTopOf="@+id/w_textview5" />

            <TextView
                android:id="@+id/w_textview8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/w_mine_attention"
                android:textColor="@color/res_99"
                app:layout_constraintBottom_toBottomOf="@+id/w_textview7"
                app:layout_constraintEnd_toEndOf="@+id/w_textview4"
                app:layout_constraintStart_toStartOf="@+id/w_textview4"
                app:layout_constraintTop_toTopOf="@+id/w_textview7" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_common_use"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/w_shape_frame_white"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_header" />


        <View
            android:id="@+id/v_2"
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_marginTop="24dp"
            android:background="@color/res_divide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_common_use" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
